Issue #1721812: Binary operations and copy operations on set/frozenset subclasses need to return the base type, not the subclass itself.